--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
 /*--- TESTO ---*/
 
 
@@ -29,6 +33,8 @@ a:visited,a:hover{
 li{
     text-decoration: none;
 }
+
+
 /*╔═══════════════╗
       VARIABILI
   ╚═══════════════╝*/
@@ -38,9 +44,11 @@ li{
     --colore-testo: #fff;
     --colore-testo-secondario: #cecece;
     --colore-testo-titolo: #000;
-    /* --colore-bg-primario: #111111; */
-    --colore-bg-primario: rgb(161, 142, 142);
+    --colore-testo-footer: #a8a8a8;
+    --colore-bg-primario: #111111;
+    /* --colore-bg-primario: rgb(161, 142, 142); */
     --colore-bg-secondario: #0a0b0b;
+    --colore-bg-footer: #1b1b1b;
 
     /*- DIMENSIONI GUTTER E SPAZIATURE-*/
     --gutter: 1.5rem;
@@ -62,7 +70,7 @@ li{
       position: fixed;
       background-color: var(--colore-bg-primario);
       z-index: 10;
-      padding: 5px 0;
+      padding: 5px 2.5px;
   }
 
   header{
@@ -71,8 +79,21 @@ li{
   }
 
   footer{
+      background-color: var(--colore-bg-footer);
+      color: var(--colore-testo-footer);
       bottom: 0;
       left: 0;
+  }
+
+  /*---- Button ---*/
+
+  button{
+      font-size: 1rem;
+      padding: 0 5px;
+      color: var(--colore-testo);
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
   }
 
 
@@ -94,9 +115,9 @@ header .menu{
 
 header .menu > * {
     background-color: var(--colore-bg-secondario);
-    height: 20px;
-    line-height: 20px;
-    min-width:20px;
+    height: 30px;
+    line-height: 30px;
+    min-width:30px;
     text-align: center;
     border-radius: 5px;
 }
@@ -146,3 +167,11 @@ header .menu .record .circle .cirlce-red{
     transform: translate(-50%,-50%);
     
 }
+
+/*--- MAIN ---*/
+
+
+
+
+/*--- FOOTER ---*/
+
