--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ li{
       VARIABILI
   ╚═══════════════╝*/
 
- :root{
+:root{
     /*- COLORI -*/
     --colore-testo: #fff;
     --colore-testo-secondario: #cecece;
@@ -54,13 +54,14 @@ li{
     --gutter: 1.5rem;
     --gutter-smal:  1rem;
     --gutter-big: 2.5rem;
+    --gutter-x-smal:  0.5rem;
 }
 
 /*╔═══════════════╗
        COMMON
   ╚═══════════════╝*/
 
-  header,footer{
+header,footer{
       color: var(--colore-testo);
       width: 100%;
       min-height: 20px;
@@ -71,30 +72,62 @@ li{
       background-color: var(--colore-bg-primario);
       z-index: 10;
       padding: 5px 2.5px;
-  }
+}
 
-  header{
+header{
       top:0;
       left: 0;
-  }
+}
 
-  footer{
+footer{
+      padding: 10px 0;
       background-color: var(--colore-bg-footer);
       color: var(--colore-testo-footer);
       bottom: 0;
       left: 0;
-  }
+}
 
-  /*---- Button ---*/
+/*---- Button ---*/
 
-  button{
-      font-size: 1rem;
-      padding: 0 5px;
-      color: var(--colore-testo);
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-  }
+button{
+    display: inline-block;
+    font-size: 1rem;
+    padding: 0 5px;
+    color: inherit;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    text-transform: capitalize;
+}
+
+.btn-icon{
+    font-size: 0.75rem;
+    padding: 0 1.3rem;
+}
+
+.btn-red{
+    font-size: small;
+    padding: 5px 10px;
+    background-color: #a8352e;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    margin: 0 1.3rem;
+}
+
+.btn-menu{
+    position: relative;
+}
+
+.btn-menu::after{
+    content:"\f106";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 1px;
+}
 
 
 
@@ -170,8 +203,25 @@ header .menu .record .circle .cirlce-red{
 
 /*--- MAIN ---*/
 
+main {
+    background-color: var(--colore-bg-primario);
+    height: calc(100vh - 105px);
+    margin-top: 40px;
+}
 
 
 
 /*--- FOOTER ---*/
+
+footer div i {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+
+footer .partecipants span{
+    display: inline-block;
+    vertical-align: top;
+}
+
+
 
