--- a/css/style.css
+++ b/css/style.css
@@ -216,13 +216,17 @@ main .container{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    gap: 5px;
+    align-content: flex-start;
 }
 
 main .container .user{
     background-color: #fff;
+    border-radius: 5px;
     position: relative;
-    width: calc(100%/6);
-    padding-top: 56.25%;
+    width: calc(100% / 6 - 5px) ;
+    padding-top: calc(((100% / 6) - 5px) * 0.5225) ;
+    height: 0;
 }
 
 
