--- a/css/style.css
+++ b/css/style.css
@@ -268,5 +268,17 @@ footer .partecipants span{
     vertical-align: top;
 }
 
+footer .active{
+    color: #67d669;
+}
+
+footer .rec i{
+    margin-left: 10px;
+    padding: 0 5px;
+    border-radius: 5px;
+    background-color: var(--colore-testo-footer);
+    color: var(--colore-bg-footer);
+}
+
 
 
